Simplified version.